HAP-38:fix property gap

--- a/src/components/Header/HeaderDesktop/HeaderDesktop.module.scss
+++ b/src/components/Header/HeaderDesktop/HeaderDesktop.module.scss
@@ -9,7 +9,7 @@
   width: 100%;
   align-items: center;
   padding-left: 7vw;
-  gap: 7vw;
+
 
   &_logo {
     font-weight: 700;
@@ -23,7 +23,12 @@
 
   &_menu {
     display: flex;
-    gap: 6%;
+    margin-left: 7vw ;
+    li{
+      &:nth-child(2n){
+        margin: 0 6%;
+      }
+    }
     &_item {
       cursor: pointer;
       text-underline-offset: 5px;
@@ -38,11 +43,13 @@
 
   &_right_side{
     width: 100%;
-    gap: 4%;
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
     padding-right: 130px;
+    &_delimiter{
+      margin: 0 4%;
+    }
 
     @media screen and (max-width: $xl-size) {
       padding-right: 50px;
